Allow nullable flow metadata maps