@@ -1,5 +1,7 @@
 package com.ferricstore;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -11,6 +13,6 @@ final class ImmutableCopies {
     }
 
     static <K, V> Map<K, V> map(Map<? extends K, ? extends V> values) {
-        return values == null ? Map.of() : Map.copyOf(values);
+        return values == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(values));
     }
 }
